[tool.poetry]
name = "flask-installer"
version = "0.1.0"
description = ""
authors = ["Felipebros <felipeiturama@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.11,>=3.6"
Flask = "^2.0.2"
pyinstaller = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
